--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,6 +6,11 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+::-webkit-scrollbar
+
+html body {
+  width: 98vw;
+}
 
 body {
   background-color: rgb(171, 190, 241);
