--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,20 +4,33 @@
   padding: 0px;
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
 
 
-body {
+body, html {
   background-color: rgb(171, 190, 241);
+  height: 100vh;
+  width: 100vw;
+}
+
+main {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+
 }
 
 #login { /*Fundo formulário*/
-  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: white;
   width: 280px;
   height: 650px;
-  margin-top: 110px;
   border-radius: 28px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 }
 
 
@@ -48,20 +61,21 @@ body {
 
 .email, .password { /*Botão E-mail e senha*/
   background-color: rgb(173, 173, 240);
-  width: 262px;
-  height: 48px;
-  margin-left: 10px;
+  width: 265px;
+  height: 50px;
+  margin-left: 8px;
   border-radius: 9px;
+  padding: 1px;
 }
 
 .email input, .password input { /*Botão interno e-mail e senha */
   background-color: white;
   border: none;
   border-radius: 6px;
-  width: 213px;
-  height: 30px;
+  width: 218px;
+  height: 33px;
   padding-top: 10px;
-  margin-left: 12px;
+  margin-left: 9px;
   text-align: center;
   font-size: 18px;
 }
