--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,6 +8,7 @@
 }
 
 
+
 body, html {
   background-color: rgb(171, 190, 241);
   height: 100vh;
@@ -26,6 +27,7 @@ main {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  overflow:hidden;
   background-color: white;
   width: 280px;
   height: 650px;
