--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,7 +8,6 @@
 }
 
 
-
 body, html {
   background-color: rgb(171, 190, 241);
   height: 100vh;
@@ -19,88 +18,30 @@ main {
   position: relative;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
-
 }
 
-#login { /*Fundo formulário*/
-  background-color: white;
+#login {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 280px;
-  height: 650px;
-  border-radius: 28px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
-}
-
-
-#imagem img { /*Imagem formulário*/
-  border-top-right-radius: 25px;
-  border-top-left-radius: 25px;
-  width: 280px;
-  height: 250px;
-}
-
-#formulario h1 { /*Título formulário*/
-  text-align: center;
-  padding: 10px;
-  font-size: 28px;
-}
-
-#formulario p { /*Parágrafo formulário*/
-  text-indent: 10px;
-  font-size: 15px;
-  padding: 8px;
-}
-
-.material-symbols-outlined { /*Icon E-mail*/
- margin-top: 10px;
- padding-left: 4px;
- 
-}
-
-.email, .password { /*Botão E-mail e senha*/
-  background-color: rgb(173, 173, 240);
-  width: 265px;
-  height: 50px;
-  margin-left: 8px;
-  border-radius: 9px;
-  padding: 1px;
-}
-
-.email input, .password input { /*Botão interno e-mail e senha */
+  overflow: hidden;
   background-color: white;
-  border: none;
-  border-radius: 6px;
-  width: 218px;
-  height: 33px;
-  padding-top: 10px;
-  margin-left: 9px;
-  text-align: center;
-  font-size: 18px;
+  width: 250px;
+  height: 500px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0,0.450);
 }
 
-
-.password {
-  margin-top: 8px;
+section#login div#imagem {
+  display: block;
+  background:  rgb(171, 190, 241) url(../imagens/img-cel.jpg) no-repeat;
+  background-size: cover;
+  background-position: left bottom;
+  height: 200px;
 }
 
-.submit input, .forget-password input {
-  margin-top: 15px;
-  margin-left: 40px;
-  width: 210px;
-  height: 34px;
-  border: none;
-  border-radius: 9px;
-  color: white;
-  font-size: 18px;
-  background-color: rgb(173, 173, 240);
-}
-
-
-.submit input:hover, .forget-password input:hover {
-  cursor: pointer;
-  background-color: rgb(134, 134, 197);
+section div#formulario {
+  display: block;
+  padding: 10px;
 }
