--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,13 +14,15 @@ body, html {
   width: 100vw;
 }
 
+
+
 main {
   position: relative;
   height: 100vh;
   width: 100vw;
 }
 
-#login {
+section#login {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -31,6 +33,9 @@ main {
   height: 500px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0,0.450);
+
+  transition: width .3s, height .3s;
+  transition-timing-function: ease;
 }
 
 section#login div#imagem {
