--- a/estilos/style.css
+++ b/estilos/style.css
@@ -77,4 +77,12 @@ section div.email-senha {
   font-size: 16px;
 }
 
+div#formulario h1 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+div#formulario p {
+  font-size: 0.9em;
+}
 
