--- a/media-query/style.css
+++ b/media-query/style.css
@@ -17,11 +17,20 @@
     height: 100%;
   }
 
-  section#login div#formulario { /**/
+  section#login div#formulario { 
     float: right;
     width: 65%;
   }
 
+  div#formulario h1 {
+    font-size: 2em;
+  }
+
+  div#formulario p {
+    font-size: 1.3em;
+  }
+  
+  
  }
 
  @media screen and (min-width:992px) {
@@ -35,15 +44,25 @@
     }
 
     section#login div#imagem {
-      float: left;
+      float: right;
       width: 50%;
       height: 100%;
     }
 
     section#login div#formulario {
-      float: right;
+      float: left;
       width: 50%;
     }
+
+    div#formulario h1 {
+      font-size: 2em;
+    }
+
+    div#formulario p {
+      font-size: 1.3em;
+    }
+    
+    
  }
   
     
